[package]
name = "laundryserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
chrono = "0.4.38"
colored = "2.1.0"
actix-files = "0.6.6"
actix-ws = "0.3.0"
futures-util = "0.3.28"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = { version = "1.10.0", features = ["v4"] }
lettre = "0.11.9"
lazy_static = "1.5.0"
dotenv = "0.15.0"